--- a/assets/styles.css
+++ b/assets/styles.css
@@ -131,3 +131,21 @@ body {
   bottom: 0%;
   padding: 1em;
 }
+
+.body-container {
+  position: absolute;
+  top: 8%;
+  right: 5%;
+  width: 80%;
+  height: 80%;
+  z-index: 10000;
+  display: inline;
+  background-color: white;
+}
+
+.content-box {
+  position: relative;
+
+  width: 33%;
+  height: 80%;
+}
