--- a/assets/styles.css
+++ b/assets/styles.css
@@ -130,6 +130,7 @@ body {
   position: fixed;
   bottom: 0%;
   padding: 1em;
+  z-index: 8;
 }
 
 .body-container {
@@ -138,9 +139,10 @@ body {
   right: 5%;
   width: 80%;
   height: 80%;
-  z-index: 10000;
+  z-index: 9;
   display: inline;
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.8);
+  pointer-events: none;
 }
 
 .content-box {
