--- a/assets/header.css
+++ b/assets/header.css
@@ -1,40 +1,38 @@
 .nav-container {
   position: absolute;
   top: 0;
-  background-color: black;
+  background-color: rgba(170, 170, 170, 0.8);
   height: 100%;
-  width: 10%;
+  width: 5%;
+  min-width: 4rem;
   display: flex;
   flex-direction: column;
   border-radius: 10px;
   justify-content: flex-start;
   z-index: 10;
+  pointer-events: none;
+  box-shadow: rgba(15, 56, 15, 0.8) 3px 3px 3px;
 }
 
 .nav-link {
-  height: 100px;
-  width: 100px;
-  background-color: #01baef;
+  font-size: 30px;
+  width: 8rem;
+  padding: 0.25em;
+  background-color: rgba(139, 172, 15, 0.8);
   border-radius: 10px;
   margin: 15px;
-  transition: 0.4s ease-in-out;
   position: relative;
+  box-shadow: rgba(15, 56, 15, 0.8) 3px 3px 3px;
+  pointer-events: fill;
 }
 
 .nav-link a {
-  display: block;
-  position: absolute;
-  top: 30%;
-  left: 20%;
+  display: inline-block;
 }
 
 .nav-link:hover {
-  width: 300px;
-  transition: 0.4s ease-in-out;
-  font-size: 300%;
-}
-
-.nav-link:active {
-  background-color: #de1a1a;
-  transition: 0.01s ease-in-out;
+  width: 50%;
+  transition: all 4s ease-in;
+  background-color: rgba(155, 188, 15, 0.8);
+  text-align: center;
 }
