--- a/assets/styles.css
+++ b/assets/styles.css
@@ -2,9 +2,14 @@
   box-sizing: border-box;
 }
 
+@font-face {
+  font-family: steve;
+  src: url(Steven.ttf);
+}
+
 html {
   font-size: 20px;
-  font-family: monospace;
+  font-family: steve;
 }
 
 body {
