--- a/assets/header.css
+++ b/assets/header.css
@@ -3,36 +3,63 @@
   top: 0;
   background-color: rgba(170, 170, 170, 0.8);
   height: 100%;
-  width: 5%;
-  min-width: 4rem;
+  width: 7%;
+  min-width: 5rem;
   display: flex;
   flex-direction: column;
-  border-radius: 10px;
+  border-radius: 0px 10px 10px 0px;
   justify-content: flex-start;
   z-index: 10;
   pointer-events: none;
   box-shadow: rgba(15, 56, 15, 0.8) 3px 3px 3px;
+  text-align: left;
 }
 
 .nav-link {
-  font-size: 30px;
-  width: 8rem;
-  padding: 0.25em;
-  background-color: rgba(139, 172, 15, 0.8);
+  display: inline-block;
+  min-width: 3rem;
+  width: max-content;
   border-radius: 10px;
   margin: 15px;
   position: relative;
   box-shadow: rgba(15, 56, 15, 0.8) 3px 3px 3px;
+  text-decoration-line: none;
   pointer-events: fill;
 }
 
-.nav-link a {
-  display: inline-block;
+.nav-link-static {
+  font-size: 30px;
+  padding-right: 1em;
+  background-color: rgba(48, 98, 48, 0.9);
+  color: rgb(155, 188, 15);
 }
 
-.nav-link:hover {
-  width: 50%;
-  transition: all 4s ease-in;
-  background-color: rgba(155, 188, 15, 0.8);
-  text-align: center;
+.nav-link-dynamic {
+  font-size: 0px;
+  background-color: rgba(139, 172, 15, 0.9);
+  color: #0f380f;
+  transition: all 0.4s ease-in-out;
+}
+
+.nav-link-dynamic:hover {
+  font-size: 30px;
+  padding-right: 1em;
+  transition: all 0.2s ease-in-out;
+}
+
+.nav-link-static:hover {
+  color: #0f380f;
+  background-color: rgba(170, 170, 170, 0.9);
+}
+
+.nav-link i {
+  padding: 0.5em;
+  font-size: 30px;
+  color: #0f380f;
+  pointer-events: fill;
+}
+
+.nav-link-static i:hover {
+  color: #8bac0f;
+  filter: drop-shadow(3px 3px 3px rgba(15, 56, 15, 0.9));
 }
