--- a/assets/styles.css
+++ b/assets/styles.css
@@ -145,14 +145,43 @@ body {
 
 .body-container {
   position: absolute;
-  top: 5%;
-  right: 5%;
+  top: 5em;
+  left: 8em;
   width: 80%;
-  height: 85%;
+  height: 83%;
   z-index: 9;
   display: inline;
   background-color: rgba(175, 175, 175, 0.8);
   box-shadow: rgba(15, 56, 15, 0.8) 3px 3px 3px;
   pointer-events: none;
   border-radius: 10px;
+}
+
+.content-box {
+  position: relative;
+  background-color: rgba(15, 56, 15, 0.8);
+  color: rgb(139, 172, 15);
+  border-radius: 10px;
+  margin: 1rem;
+  padding: 0.5em;
+  box-shadow: rgba(15, 56, 15, 0.8) 3px 3px 3px;
+}
+
+.content-box h1 {
+  margin: 0;
+  text-align: right;
+  font-size: 2em;
+  margin-bottom: 1rem;
+}
+
+.content-box h2 {
+  margin: 0;
+  text-align: left;
+  margin-bottom: 0.8rem;
+}
+
+.section-text {
+  text-align: justify;
+  margin-bottom: 1rem;
+  text-indent: 1em;
 }
