--- a/assets/styles.css
+++ b/assets/styles.css
@@ -105,25 +105,23 @@ body {
   padding-right: 0.5rem;
 }
 
-.portfolio .paragraph::-webkit-scrollbar {
-  width: 0.5rem;
+.body-container::-webkit-scrollbar {
+  width: 1.3rem;
 }
 
-.portfolio .paragraph::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px black;
-  background-color: grey;
-  border-radius: 0.5rem;
+.body-container::-webkit-scrollbar-track {
+  border-radius: 10px;
 }
 
-.portfolio .paragraph::-webkit-scrollbar-thumb {
-  background-color: white;
-  border-radius: 0.5rem;
-  box-shadow: inset 0 0 5px black;
+.body-container::-webkit-scrollbar-thumb {
+  background-color: rgba(139, 172, 15, 0.5);
+  border-radius: 10px;
+  box-shadow: inset 0 0 5px rgb(15, 56, 15, 0.8);
 }
 
-.portfolio .paragraph::-webkit-scrollbar-thumb:hover {
-  background-color: rgb(0, 247, 255);
-  box-shadow: inset 0 0 5px purple;
+.body-container::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(155, 188, 15, 1);
+  box-shadow: inset 0 0 5px rgb(15, 56, 15, 1);
 }
 
 .foot-div {
@@ -153,8 +151,9 @@ body {
   display: inline;
   background-color: rgba(175, 175, 175, 0.8);
   box-shadow: rgba(15, 56, 15, 0.8) 3px 3px 3px;
-  pointer-events: none;
+  pointer-events: all;
   border-radius: 10px;
+  overflow-y: auto;
 }
 
 .content-box {
@@ -184,4 +183,43 @@ body {
   text-align: justify;
   margin-bottom: 1rem;
   text-indent: 1em;
+}
+
+.animation-gallery {
+  display: grid;
+  gap: 2rem;
+  padding: 0px 2rem;
+  grid-template-columns: repeat(3, 1fr);
+}
+
+img {
+  display: block;
+  width: 100%;
+  object-fit: contain;
+  background-color: rgba(139, 172, 15, 0.8);
+  padding: 0.5rem;
+  box-shadow: rgba(15, 56, 15, 0.8) 3px 3px 3px;
+  border-radius: 10px;
+}
+
+.image-caption {
+  background-color: rgba(139, 172, 15, 0.8);
+  color: rgb(48, 98, 48) !important;
+  font-weight: 1000 !important;
+  font-size: 0.9rem;
+  text-align: center;
+  margin-top: 0.2rem;
+  border-radius: 10px;
+  box-shadow: rgba(15, 56, 15, 0.8) 3px 3px 3px;
+}
+
+.link-button {
+  text-decoration: none;
+  display: inline;
+  background-color: rgba(155, 155, 155, 0.8);
+  box-shadow: rgba(15, 56, 15, 0.8) 3px 3px 3px;
+  padding: 0.3em;
+  margin: 0 auto;
+  border-radius: 10px;
+  color: rgb(15, 56, 15) !important;
 }
