--- a/assets/styles.css
+++ b/assets/styles.css
@@ -125,7 +125,6 @@ body {
 }
 
 .foot-div {
-  /* width: 100%; */
   font-size: 0.8rem;
   text-align: center;
   background-color: rgba(175, 175, 175, 0.8);
@@ -189,7 +188,25 @@ body {
   display: grid;
   gap: 2rem;
   padding: 0px 2rem;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(4, 1fr);
+}
+
+@media only screen and (max-width: 1500px) {
+  .animation-gallery {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media only screen and (max-width: 1000px) {
+  .animation-gallery {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media only screen and (max-width: 700px) {
+  .animation-gallery {
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
 
 img {
@@ -210,14 +227,15 @@ img {
   text-align: center;
   margin-top: 0.2rem;
   border-radius: 10px;
+  padding: 0.2em 1em;
   box-shadow: rgba(15, 56, 15, 0.8) 3px 3px 3px;
 }
 
 .link-button {
   text-decoration: none;
   display: inline;
-  background-color: rgba(155, 155, 155, 0.8);
-  box-shadow: rgba(15, 56, 15, 0.8) 3px 3px 3px;
+  background-color: rgba(155, 155, 155, 0.5);
+  box-shadow: rgba(15, 56, 15, 1) 3px 3px 3px;
   padding: 0.3em;
   margin: 0 auto;
   border-radius: 10px;
