--- a/assets/styles.css
+++ b/assets/styles.css
@@ -234,10 +234,14 @@ img {
 .link-button {
   text-decoration: none;
   display: inline;
-  background-color: rgba(155, 155, 155, 0.5);
+  background-color: rgba(155, 155, 155, 0.4);
   box-shadow: rgba(15, 56, 15, 1) 3px 3px 3px;
   padding: 0.3em;
   margin: 0 auto;
   border-radius: 10px;
   color: rgb(15, 56, 15) !important;
+}
+
+.link-button:hover {
+  background-color: rgba(155, 155, 155, 1);
 }
